# tropic_layer

./: .gitignore  CMakeLists.txt  README.md  main.cu
.github/workflows/: workflow.yml
src/: main.cu
